improve responsive search on small displays with custom links in header, fixes #8362

--- a/public/assets/stylesheets/less/responsive.less
+++ b/public/assets/stylesheets/less/responsive.less
@@ -376,11 +376,19 @@ label[for="responsive-toggle"] {
 
     #globalsearch-searchbar {
         #globalsearch-input {
-            max-width: 215px;
+            left: 50px;
+            max-width: 50%;
+            position: fixed;
+            top: 5px;
+        }
+        #globalsearch-icon {
+            left: calc(100% - 15px);
+            top: 7px;
         }
         #globalsearch-list {
+            left: -181px;
+            top: 28px;
             width: 100vw;
-            left: -46px;
         }
     }
 
